# NachonekoBot-V2

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  README.md  README.zh.md  app_conf.py  database_setup.sql  docker-compose.yml  main.py  nachonekobot.service  pm2.json  pyproject.toml  requirements.txt  setup_docker_config.bat  setup_docker_config.sh
.github/workflows/: docker-build.yml
app/: controller.py  event.py  scheduler.py  utils.py
app/plugin_system/: decorators.py  manager.py  middleware.py  models.py  plugin_settings.py
app/security/: permissions.py
conf_dir/: config.yaml.exp
plugin/: __init__.py  bc.py  bin.py  callanyone.py  dns.py  dnsapi.py  icp.py  ip.py  ipali.py  keybox.py  lock.py  lottery.py  ocr.py  ping.py  shorturl.py  status.py  tcping.py  trace.py  weather.py  whois.py  xiatou.py  xibao.py
plugins/: __init__.py  bc.py  bcpro.py  bcup.py  bin.py  callanyone.py  dns.py  dnsapi.py  dnsapi.py.disabled  icp.py  ip.py  ipali.py  ipali.py.disabled  keybox.py  lock.py  long_image_cutter.py  lottery.py  mcstatus.py  memory.py  ocr.py  ping.py  quote_reply.py  rdap.py  remake.py  shorturl.py  stats.py  status.py  tag.py  tcping.py  trace.py  version.json  weather.py  whois.py  xiatou.py  xibao.py
tests/: test_lock_command_routing.py  test_memory_plugin.py  test_quote_reply.py
tools/: add_i18n_language.py  backfill_dragon_king.py  get_revoke_list.py  polish_zh_plugins.py  scaffold_plugin_locales.py  translate_en_plugins.py
utils/: __init__.py  elaradb.py  ip.py  postgres.py  telegram_guest.py  telegram_send_queue.py  yaml.py
utils/i18n/: README.md  __init__.py  config.py  context.py  runtime.py  service.py  validator.py
utils/i18n/en/: framework.json
utils/i18n/en/plugins/: bc.json  bin.json  callanyone.json  dns.json  icp.json  ip.json  keybox.json  lock.json  long_image_cutter.json  lottery.json  mcstatus.json  memory.json  ocr.json  ping.json  quote_reply.json  rdap.json  remake.json  shorturl.json  stats.json  status.json  tag.json  tcping.json  trace.json  weather.json  whois.json  xiatou.json  xibao.json
utils/i18n/ja/: framework.json
utils/i18n/ja/plugins/: bc.json  bin.json  callanyone.json  dns.json  icp.json  ip.json  keybox.json  lock.json  long_image_cutter.json  lottery.json  mcstatus.json  memory.json  ocr.json  ping.json  quote_reply.json  rdap.json  remake.json  shorturl.json  stats.json  status.json  tag.json  tcping.json  trace.json  weather.json  whois.json  xiatou.json  xibao.json
utils/i18n/zh-CN/: framework.json
utils/i18n/zh-CN/plugins/: bc.json  bin.json  callanyone.json  dns.json  icp.json  ip.json  keybox.json  lock.json  long_image_cutter.json  lottery.json  mcstatus.json  memory.json  ocr.json  ping.json  quote_reply.json  rdap.json  remake.json  shorturl.json  stats.json  status.json  tag.json  tcping.json  trace.json  weather.json  whois.json  xiatou.json  xibao.json
utils/i18n/zh-TW/: framework.json
utils/i18n/zh-TW/plugins/: bc.json  bin.json  callanyone.json  dns.json  icp.json  ip.json  keybox.json  lock.json  long_image_cutter.json  lottery.json  mcstatus.json  memory.json  ocr.json  ping.json  quote_reply.json  rdap.json  remake.json  shorturl.json  stats.json  status.json  tag.json  tcping.json  trace.json  weather.json  whois.json  xiatou.json  xibao.json
