[project]
name = "NachonekoBot"
version = "2.0.0"
description = "A telegram bot framework for building bots with ease, featuring a modular architecture and support for various plugins."
authors = [
    { name = "github", email = "kimmyxyc@nepnep.moe" },
]
dependencies = [
    "pyTelegramBotAPI>=4.29.1",
    "asgiref>=3.11.0",
    "loguru>=0.7.3",
    "requests>=2.32.5",
    "PyYAML>=6.0.3",
    "elara>=0.5.5",
    "asyncpg>=0.31.0",
    "idna>=3.11",
    "aiohttp>=3.13.2",
    "pillow>=12.0.0",
    "cryptography>=46.0.3",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "psutil>=7.1.3",
    "pytz>=2025.2",
    "python-dotenv>=1.2.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "dynaconf>=3.2.12",
    "dnspython>=2.8.0",
    "scapy>=2.6.1",
    "binance-connector>=3.12.0",
    "xmltodict>=1.0.2",
    "curl-cffi>=0.14.0",
]



requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".idea",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
