[project]
name = "NachonekoBot"
version = "2.0.0"
description = "A telegram bot framework for building bots with ease, featuring a modular architecture and support for various plugins."
authors = [
    { name = "KimmyXYC", email = "kimmyxyc@nepnep.moe" },
]
dependencies = [
    "pyTelegramBotAPI>=4.30.0",
    "asgiref>=3.11.1",
    "loguru>=0.7.3",
    "requests>=2.32.5",
    "PyYAML>=6.0.3",
    "elara>=0.5.5",
    "asyncpg>=0.31.0",
    "idna>=3.11",
    "aiohttp>=3.13.3",
    "pillow>=12.1.1",
    "cryptography>=46.0.5",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "psutil>=7.2.2",
    "pytz>=2025.2",
    "python-dotenv>=1.2.1",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "dynaconf>=3.2.12",
    "dnspython>=2.8.0",
    "scapy>=2.7.0",
    "binance-connector>=3.12.0",
    "xmltodict>=1.0.2",
    "curl-cffi>=0.14.0",
    "mcstatus>=12.2.1",
    "pysocks>=1.7.1",
]



requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.4.0",
]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".idea",
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 88
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
select = ["E4", "E7", "E9", "F"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
